# rust_cpp_bench

./: .gitignore  Makefile  README.md
.github/workflows/: build.yml
ci/: conan_gcc.txt  deb_install.sh  setup_gbench.sh
cxx/: CMakeLists.txt  conanfile.txt  main.cpp
cxx/cmake/: cxx_setting.cmake  support_libs.cmake
cxx/src/: CMakeLists.txt  bench.cpp  cpp_math.cpp  cpp_math.h  cpp_math.hpp  main.cpp
my_rust_math/: Cargo.toml
my_rust_math/benches/: bench_entry.rs
my_rust_math/include/: my_rust_math.h
my_rust_math/src/: lib.rs  prime_num.rs
