[package]
name = "my_rust_math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"

[lib]
name = "my_rust_math"
crate-type = ["cdylib", "staticlib"]

[profile.release]
opt-level = 3